--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Data files
+[Ff]ifty*.csv
+Routes.csv
+Weather.csv
+*.zip
+States/
+50-StopData/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
